@@ -51,12 +51,10 @@ Contribute to <i>ipsvd</i> through
 <hr>
 Related links:
 <ul>
-<li><a href="http://packages.debian.org/ipsvd">ipsvd Debian package</a>
-<li><a href="http://www.freshports.org/net/ipsvd/">ipsvd FreeBSD port</a>
-<li><a href="http://www.xinetd.org/">xinetd</a>
-<li>inetd
 <li><a href="https://cr.yp.to/ucspi-tcp.html">ucspi-tcp</a>
-<li><a href="http://netcat.sourceforge.net/">netcat</a>
+<li><a href="https://netcat.sourceforge.net">netcat</a>
+<li><a href="https://en.wikipedia.org/wiki/Xinetd">xinetd</a>
+<li><a href="https://en.wikipedia.org/wiki/Inetd">inetd</a>
 </ul>
 <hr>
 <address><a href="mailto:pape@smarden.org">
